--- a/KimonoFeed/Base.lproj/Main.storyboard
+++ b/KimonoFeed/Base.lproj/Main.storyboard
@@ -1,24 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YxQ-99-CGA">
+    <device id="retina6_5" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Feed Collection View Controller-->
+        <scene sceneID="DZ3-aI-rsx">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <collectionViewController storyboardIdentifier="FeedCollectionViewController" id="h4x-7f-UvX" customClass="FeedCollectionViewController" customModule="KimonoFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="m4v-e6-YXm">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eFa-rj-Cst">
+                            <size key="itemSize" width="202" height="264"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCollectionViewCell" id="I71-IK-dyr" customClass="ImageCollectionViewCell" customModule="KimonoFeed" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="202" height="264"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="202" height="264"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mtc-VK-2Qo">
+                                            <rect key="frame" x="2" y="245" width="198" height="17"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MTT-17-7XU">
+                                            <rect key="frame" x="2" y="2" width="198" height="241"/>
+                                        </imageView>
+                                    </subviews>
+                                </view>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="Mtc-VK-2Qo" secondAttribute="trailing" constant="2" id="7Mz-bC-Zst"/>
+                                    <constraint firstItem="MTT-17-7XU" firstAttribute="top" secondItem="I71-IK-dyr" secondAttribute="top" constant="2" id="7iT-sQ-qJc"/>
+                                    <constraint firstItem="MTT-17-7XU" firstAttribute="leading" secondItem="I71-IK-dyr" secondAttribute="leading" constant="2" id="bpN-hI-B4v"/>
+                                    <constraint firstItem="Mtc-VK-2Qo" firstAttribute="top" secondItem="MTT-17-7XU" secondAttribute="bottom" constant="2" id="dCx-un-j0n"/>
+                                    <constraint firstAttribute="trailing" secondItem="MTT-17-7XU" secondAttribute="trailing" constant="2" id="faO-Qa-08M"/>
+                                    <constraint firstAttribute="bottom" secondItem="Mtc-VK-2Qo" secondAttribute="bottom" constant="2" id="ikU-d3-nSG"/>
+                                    <constraint firstItem="Mtc-VK-2Qo" firstAttribute="leading" secondItem="I71-IK-dyr" secondAttribute="leading" constant="2" id="zdN-AH-IY5"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="MTT-17-7XU" id="BEE-TQ-4CF"/>
+                                    <outlet property="titleLabel" destination="Mtc-VK-2Qo" id="TMc-EE-VLH"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="h4x-7f-UvX" id="wlQ-CL-NJ1"/>
+                            <outlet property="delegate" destination="h4x-7f-UvX" id="qOj-Hd-NTW"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="6wd-QI-Bqy"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qd5-8h-Pcf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1743.4782608695652" y="-65.625"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="C0H-e7-LDQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YxQ-99-CGA" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="smb-hH-7gw">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="h4x-7f-UvX" kind="relationship" relationship="rootViewController" id="edp-eE-Q12"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lFI-1f-QIe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="805.60000000000002" y="-65.217391304347828"/>
         </scene>
     </scenes>
 </document>
