--- a/KimonoFeed/Base.lproj/Main.storyboard
+++ b/KimonoFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="YxQ-99-CGA">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qUW-Rc-psI">
     <device id="retina6_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -118,12 +118,13 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qd5-8h-Pcf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1743.4782608695652" y="-65.625"/>
+            <point key="canvasLocation" x="2653.6231884057975" y="-65.625"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Main Screen-->
         <scene sceneID="C0H-e7-LDQ">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="YxQ-99-CGA" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Main Screen" id="XmM-vl-pia"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="smb-hH-7gw">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -136,12 +137,12 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lFI-1f-QIe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="805.60000000000002" y="-65.217391304347828"/>
+            <point key="canvasLocation" x="1714.4927536231885" y="-65.625"/>
         </scene>
-        <!--Zoomable View Controller-->
+        <!--Zoomable Image View Controller-->
         <scene sceneID="D3K-3d-D14">
             <objects>
-                <viewController storyboardIdentifier="ZoomableViewController" automaticallyAdjustsScrollViewInsets="NO" id="inS-ub-crg" customClass="ZoomableViewController" customModule="FluidPhoto" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ZoomableImageViewController" automaticallyAdjustsScrollViewInsets="NO" id="inS-ub-crg" customClass="ZoomableImageViewController" customModule="KimonoFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="1hp-1U-KnO"/>
                         <viewControllerLayoutGuide type="bottom" id="7Y9-mv-jo5"/>
@@ -186,12 +187,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ASa-gq-Hcd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4028" y="-20"/>
+            <point key="canvasLocation" x="4937.68115942029" y="-20.089285714285712"/>
         </scene>
         <!--Zoom-->
         <scene sceneID="pRU-EM-iLn">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="fbi-0A-MZb" customClass="PageViewControllerContainer" customModule="FluidPhoto" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="fbi-0A-MZb" customClass="PageViewControllerContainer" customModule="KimonoFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="p8d-22-3zZ"/>
                         <viewControllerLayoutGuide type="bottom" id="SvU-ku-OIq"/>
@@ -221,7 +222,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wwY-GO-lqj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2496" y="-19"/>
+            <point key="canvasLocation" x="3405.7971014492755" y="-19.419642857142858"/>
         </scene>
         <!--Page View Controller-->
         <scene sceneID="kfR-Pk-3Bu">
@@ -229,7 +230,24 @@
                 <pageViewController automaticallyAdjustsScrollViewInsets="NO" transitionStyle="scroll" pageSpacing="10" navigationOrientation="horizontal" spineLocation="none" id="gaV-EJ-EZm" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7nK-5v-m7i" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3333" y="-19"/>
+            <point key="canvasLocation" x="4242.0289855072469" y="-19.419642857142858"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="dyj-ry-Ci4">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="qUW-Rc-psI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4uF-SA-EPm">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="YxQ-99-CGA" kind="relationship" relationship="viewControllers" id="7g2-43-RlP"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yJN-IU-a8e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="804.34782608695662" y="-65.625"/>
         </scene>
     </scenes>
 </document>
